--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,13 +7,14 @@ on:
     branches: [ "feature/pipeline" ]
 
 jobs:
-  build:
 
+  build:
+    
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    
-      - name: build_linux
+ 
+    - name: build binary
       run: make build_linux
       
