--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       run: make build_linux
     
     - name: unit tests
+      shell: 'script -q -e -c "bash {0}"'
       run: make test_unit_docker
 
     - name: e2e tests
