--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,12 +14,12 @@ jobs:
     - uses: actions/checkout@v3
  
     - name: build binary
-      run: make build_linux
+      run: make build_binary
     
     - name: unit tests
       shell: 'script -q -e -c "bash {0}"'
       run: make test_unit_docker
 
     - name: e2e tests
-      run: make test_e2e_docker
+      run: make test_e2e
 
